--- a/settings.json
+++ b/settings.json
@@ -56,6 +56,12 @@
     
 "Bext" : [0.0, 0.0, 0.010],
 
+"spin polarized current" :
+    {
+    "Uz" : 0.0,
+    "beta" : 0.0
+    },
+
 "demagnetization field solver" :
     {
     "nbThreads" : 16,
