verbose now in json settings

--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,8 @@
     "file basename" : "tommy_the_cat",
     "vtk file" : false,
     "save_energies" : 3,
-    "take_photo" : 5
+    "take_photo" : 5,
+    "verbose" : false
     },
     
 "mesh" :
