python implementation of variable outputs in evol files

--- a/settings.json
+++ b/settings.json
@@ -6,7 +6,8 @@
     "vtk file" : false,
     "save_energies" : 3,
     "take_photo" : 5,
-    "verbose" : true
+    "verbose" : true,
+    "evol columns" : ["iter","t","dt","max dm","<mx>","<my>","<mz>","E_ex","E_aniso","E_demag","E_zeeman","E_tot","DW_z","DW_dz"]
     },
     
 "mesh" :
