--- a/settings.json
+++ b/settings.json
@@ -12,7 +12,7 @@
     
 "mesh" :
     {
-    "filename" : "wire_d70_L1000.msh",
+    "filename" : "cyl_extruded.msh",
     "scaling factor" : 1e-9,
     "epsilon" : 1e-40,
     "volume_regions" :
