--- a/settings.json
+++ b/settings.json
@@ -12,7 +12,7 @@
     
 "mesh" :
     {
-    "filename" : "toto.msh",
+    "filename" : "cyl_extruded_v2.msh",
     "scaling factor" : 1e-9,
     "epsilon" : 1e-40,
     "volume_regions" :
