Do not provide full path for install destination
Cmake automatically prepends CMAKE_INSTALL_PREFIX (which defaults to
"/usr/local") to the provided relative path (bin). This allows the user
to override the target installation directory by explicitly setting
CMAKE_INSTALL_PREFIX.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,5 +54,4 @@ ADD_EXECUTABLE(feellgood ${SOURCES})
 
 TARGET_LINK_LIBRARIES(feellgood scalfmm ANN)
 
-install(TARGETS feellgood RUNTIME DESTINATION /usr/local/bin )
-
+install(TARGETS feellgood RUNTIME DESTINATION bin)
