Match more strictly the git HEAD reference
The command

    git show-ref --head HEAD --hash

can output multiple lines corresponding not only to `HEAD', but also to
references such as `refs/remotes/origin/HEAD'. The option `--verify'
enables strict reference matching.

This is a better solution to the problem commit c40d2ebe0f (Remove
duplicate output from git show-ref) intended to address.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,7 @@ set(FEELLGOOD_VERSION "\"${FEELLGOOD_MAJOR_VERSION}.${FEELLGOOD_MINOR_VERSION}.$
 MESSAGE(STATUS "version = ${FEELLGOOD_VERSION}")
 
 execute_process(
-    COMMAND git show-ref --head HEAD --hash
-    COMMAND uniq  # for some reason the above can output a duplicate line
+    COMMAND git show-ref --verify --head HEAD --hash
     OUTPUT_VARIABLE SHAstr OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 set(SHAstr "\"${SHAstr}\"")  # add quotes
