--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,14 @@ MESSAGE(STATUS "CXX ${CMAKE_CXX_COMPILER_ID}")
 #===========================================================================
 
 set(FEELLGOOD_VERSION "\"${FEELLGOOD_MAJOR_VERSION}.${FEELLGOOD_MINOR_VERSION}.${FEELLGOOD_PATCH_VERSION}\"") 
-MESSAGE(STATUS "version = ${FEELLGOOD_VERSION}")
 
 execute_process(
     COMMAND git show-ref --verify --head HEAD --hash
     OUTPUT_VARIABLE SHAstr OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 set(SHAstr "\"${SHAstr}\"")  # add quotes
-MESSAGE(STATUS "executable built with SHA1 = ${SHAstr}")
+
+MESSAGE(STATUS "version = ${FEELLGOOD_VERSION} from SHA1 = ${SHAstr}")
 
 execute_process(
     COMMAND getconf _NPROCESSORS_ONLN
@@ -43,14 +43,23 @@ set( CMAKE_CXX_FLAGS "-DNDEBUG -Wall -Wextra -std=c++11 -fopenmp -O3 -ffast-math
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
 SET( SOURCES config.h pt3D.h matBlocDiag.h tetra.h tetra.cpp facette.h facette.cpp feellgoodSettings.h node.h
-	linear_algebra.h linear_algebra.cpp main.cpp feellgoodSettings.cpp read.cpp femutil.cpp
+	linear_algebra.h linear_algebra.cpp feellgoodSettings.cpp read.cpp femutil.cpp
 	recentering.cpp energy.cpp save.cpp solver.cpp tiny.h time_integration.cpp)
-
 
 configure_file(config.h.in ./config.h)
 
-ADD_EXECUTABLE(feellgood ${SOURCES})
+ADD_EXECUTABLE(feellgood main.cpp ${SOURCES})
 
 TARGET_LINK_LIBRARIES(feellgood scalfmm ANN)
 
+if(DEFINED withSharedLib)
+    MESSAGE( "Shared lib generation " ${withSharedLib} )
+    if (withSharedLib)
+        ADD_LIBRARY( _feellgood SHARED ${SOURCES} )
+        install(FILES feellgood_core.h DESTINATION include)
+        install(TARGETS _feellgood DESTINATION lib)
+    endif(withSharedLib)
+endif(DEFINED withSharedLib)
+
 install(TARGETS feellgood RUNTIME DESTINATION bin)
+
