optional header in .evol file

--- a/settings.json
+++ b/settings.json
@@ -2,12 +2,13 @@
 "outputs" :
     {
     "directory" : "data_out/",
-    "file basename" : "tommy_the_cat",
+    "file basename" : "paf_le_chien",
     "vtk file" : false,
     "save_energies" : 3,
     "take_photo" : 5,
     "verbose" : true,
-    "evol columns" : ["iter","t","dt","max dm","<mx>","<my>","<mz>","E_ex","E_aniso","E_demag","E_zeeman","E_tot","DW_z","DW_dz"]
+    "evol columns" : ["iter","t","dt","max dm","<mx>","<my>","<mz>","E_ex","E_aniso","E_demag","E_zeeman","E_tot","DW_z","DW_dz"],
+    "evol header" : true
     },
     
 "mesh" :
