Save data with a fixed time step
In settings["outputs"], the integer parameter "save_energies" is
replaced by the floating point parameter "evol time step", which is the
time step for saving the evolution parameters to the .evol file.

The "take_photo" parameter is now in units of that time step.

The integration time steps are adjusted in order to exactly hit the
times required by the .evol file.

--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
     "directory" : "data_out/",
     "file basename" : "paf_le_chien",
     "vtk file" : false,
-    "save_energies" : 3,
+    "evol time step" : 1e-7,
     "take_photo" : 5,
     "verbose" : true,
     "evol columns" : ["iter","t","dt","max dm","<mx>","<my>","<mz>","E_ex","E_aniso","E_demag","E_zeeman","E_tot","DW_z","DW_dz"],
