--- a/config.h.in
+++ b/config.h.in
@@ -38,4 +38,6 @@ const int DIM = 3;/**< space dimension, usefull for many tables */
 const double mu0 = 4.*M_PI*1e-7;/**< \f$ \mu_0 = 4 \pi 10^{-7} \f$ */
 const double nu0 = 1./mu0;/**< \f$ \nu_0 = 1/\mu_0 \f$ */
 
+#define RAND_DETERMINIST true
+
 #endif //CONFIG_H
