--- a/config.h.in
+++ b/config.h.in
@@ -36,7 +36,10 @@ typedef gmm::row_matrix	<read_vector>    read_matrix; /**< gmm read sparse matri
 const double mu0 = 4.*M_PI*1e-7;/**< \f$ \mu_0 = 4 \pi 10^{-7} \f$ */
 const double nu0 = 1./mu0;/**< \f$ \nu_0 = 1/\mu_0 \f$ */
 
+/** for debugging purpose, some determinist pseudo random number for ep,eq vector basis can be used */
 #define RAND_DETERMINIST true
+
+/** theta of the theta integration scheme in time */
 #define THETA 0.5
 
 #endif //CONFIG_H
