--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os: linux
 dist: bionic
 language: cpp
 compiler: g++
+cache: ccache
 
 # Install the required dependencies.
 install: ./install-dependencies.sh
@@ -14,3 +15,6 @@ install: ./install-dependencies.sh
 script:
     - cmake .
     - make -j $(getconf _NPROCESSORS_ONLN)
+
+# Show ccache stats.
+after_script: ccache --show-stats
