--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ cache: ccache
 # Install the required dependencies.
 install: ./install-dependencies.sh
 
-# Build script.
+# Build and test.
 script:
     - cmake .
     - make -j $(getconf _NPROCESSORS_ONLN)
+    - python3 full_test.py
 
 # Show ccache stats, clear for next time.
 after_script:
