doxygen & clean up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ MESSAGE(STATUS "MAX_NB_THREADS = ${MAX_NB_THREADS}")
 #===========================================================================
 # Compiler options -ffast-math
 # -msse4.2 -mfpmath=sse (on X86 -mfpmath=sse is set by default ) or -mavx
-# -fsanitize=address (to debug memory leak)
+# -fsanitize=address leak  null (to debug memory leak) undefined
 #===========================================================================
 
 set( CMAKE_CXX_FLAGS "-DNDEBUG -Wall -Wextra -std=c++11 -fopenmp -O3 -march=native" CACHE STRING "C++ compiler flags used during builds." FORCE )
