sudo make install also install convert2vtk in /usr/local/bin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,5 @@ if(DEFINED withSharedLib)
 endif(DEFINED withSharedLib)
 
 install(TARGETS feellgood RUNTIME DESTINATION bin)
+install(FILES ./tools/convert2vtk DESTINATION bin)
 
