--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install: ./install-dependencies.sh
 script:
     - cmake .
     - make -j $(getconf _NPROCESSORS_ONLN)
+    - make test
     - python3 full_test.py
 
 # Show ccache stats, clear for next time.
