--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,8 @@ add_definitions (-DBOOST_TEST_DYN_LINK)
 
 add_executable (test_ut_pt3D ut_pt3D.cpp)
 add_executable (test_ut_node ut_node.cpp)
+add_executable (test_ut_facette ut_facette.cpp)
+add_executable (test_ut_tetra ut_tetra.cpp)
 
 target_link_libraries(test_ut_pt3D
   ${Boost_FILESYSTEM_LIBRARY}
@@ -24,8 +26,21 @@ target_link_libraries(test_ut_node
   ${Boost_SYSTEM_LIBRARY}
   ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
   )
-  
+
+target_link_libraries(test_ut_facette
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  )
+
+target_link_libraries(test_ut_tetra
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  )
 #enable_testing()
 
 add_test (NAME ut_pt3D_arithmetic COMMAND test_ut_pt3D)
 add_test (NAME ut_node COMMAND test_ut_node)
+add_test (NAME ut_facette COMMAND test_ut_facette)
+add_test (NAME ut_tetra COMMAND test_ut_tetra)
