more templates in tiny.h for some unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,6 +18,8 @@ add_executable (test_ut_facette ${SOURCES})
 
 add_executable (test_ut_tetra ut_tetra.cpp)
 
+add_executable (test_ut_tiny ut_tiny.cpp)
+
 target_link_libraries(test_ut_pt3D
   ${Boost_FILESYSTEM_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
@@ -41,9 +43,17 @@ target_link_libraries(test_ut_tetra
   ${Boost_SYSTEM_LIBRARY}
   ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
   )
+
+target_link_libraries(test_ut_tiny
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  )
+  
 #enable_testing()
 
 add_test (NAME ut_pt3D_arithmetic COMMAND test_ut_pt3D)
 add_test (NAME ut_node COMMAND test_ut_node)
 add_test (NAME ut_facette COMMAND test_ut_facette)
 add_test (NAME ut_tetra COMMAND test_ut_tetra)
+add_test (NAME ut_tiny COMMAND test_ut_tiny)
