--- a/config.h.in
+++ b/config.h.in
@@ -52,4 +52,7 @@ const double BOHRS_MUB = CHARGE_ELECTRON*PLANCKS_HBAR/(2.*MASS_ELECTRON);
 #define EPSILON 1e-40
 //should not be fixed but computed with an analysis of the mesh
 
+/** tolerance for some unit tests involving some numerical errors */
+#define UT_TOL 1e-15
+
 #endif //CONFIG_H
