--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ set( CMAKE_CXX_FLAGS "-DNDEBUG -Wall -Wextra -std=c++11 -fopenmp -O3 -march=nati
 
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
-SET(HEADERS config.h pt3D.h node.h matBlocDiag.h mag_parser.h
+SET(HEADERS config.h pt3D.h node.h matBlocDiag.h mag_parser.h mesh.h
     time_integration.h feellgoodSettings.h tetra.h facette.h linear_algebra.h)
 
 SET(SOURCES mag_parser.cpp time_integration.cpp feellgoodSettings.cpp
