--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,8 @@ add_executable (test_ut_tetra ${SOURCES})
 
 add_executable (test_ut_tiny ut_tiny.cpp)
 
+add_executable (test_ut_time_int ut_time_int.cpp)
+
 target_link_libraries(test_ut_pt3D
   ${Boost_FILESYSTEM_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
@@ -50,7 +52,12 @@ target_link_libraries(test_ut_tiny
   ${Boost_SYSTEM_LIBRARY}
   ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
   )
-  
+
+target_link_libraries(test_ut_time_int
+  ${Boost_FILESYSTEM_LIBRARY}
+  ${Boost_SYSTEM_LIBRARY}
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  )
 #enable_testing()
 
 add_test (NAME ut_pt3D_arithmetic COMMAND test_ut_pt3D)
@@ -58,3 +65,4 @@ add_test (NAME ut_node COMMAND test_ut_node)
 add_test (NAME ut_facette COMMAND test_ut_facette)
 add_test (NAME ut_tetra COMMAND test_ut_tetra)
 add_test (NAME ut_tiny COMMAND test_ut_tiny)
+add_test (NAME ut_time_int COMMAND test_ut_time_int)
