sudo make install for rev_CMK

--- a/tools/rev_CMK/CMakeLists.txt
+++ b/tools/rev_CMK/CMakeLists.txt
@@ -27,3 +27,5 @@ SET(HEADERS rev_CMK.h)
 SET(SOURCES rev_CMK.cpp)
 
 ADD_EXECUTABLE(rev_CMK rev_CMK.cpp ${HEADERS} ${SOURCES})
+
+install(PROGRAMS rev_CMK DESTINATION bin)
