CI: make the cache keys unique
Once created, a cache cannot be updated. Instead, a new cache has to be
created using a new key.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,10 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.ccache
-        key: ccache
+        key: ccache-${{ runner.os }}-${{ github.sha }}
+        restore-keys: |
+          ccache-${{ runner.os }}-
+          ccache-
 
     - name: install dependencies
       run: |
