--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
         ccache --zero-stats
 
     - name: run unit tests
-      run: make test
+      run: make test || cat Testing/Temporary/LastTest.log
 
     - name: run functional test
       run: python3 full_test.py
