Revert "Test: output LastTest.log on failed make test"
This reverts commit c0b67edd73b93e0382f0c1317c6e28d1cebb11fe.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
         ccache --zero-stats
 
     - name: run unit tests
-      run: make test || cat Testing/Temporary/LastTest.log
+      run: make test
 
     - name: run functional test
       run: python3 full_test.py
