CI: safely enable ccache
The output of the command `gcc -### -E -march=native -' contains all the
architecture-specific options passed by ggc to the compiler proper. We
use a hash of this output as a cache key in order to avoid sharing the
cache across architectures having different instruction subsets.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,18 +6,44 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      CCACHE_COMPRESS: "true"
+      CCACHE_MAXSIZE: 500M
+
     steps:
     - name: checkout repository
       uses: actions/checkout@v2
 
+    - name: install ccache
+      run: sudo apt-get install ccache
+
+    - name: identify machine architecture
+      run: |
+        gcc -### -E -march=native - &> machine-type.txt
+        cat machine-type.txt
+
+    - name: restore cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.ccache
+        key: ccache-${{ hashFiles('machine-type.txt') }}-${{ github.sha }}
+        restore-keys: ccache-${{ hashFiles('machine-type.txt') }}-
+
     - name: install dependencies
       run: |
+        export PATH="/usr/lib/ccache:$PATH"
         ./install-dependencies.sh
 
     - name: build
       run: |
+        export PATH="/usr/lib/ccache:$PATH"
         cmake . -DENABLE_UTESTS=ON
         make -j $(getconf _NPROCESSORS_ONLN)
+
+    - name: show ccache stats
+      run: |
+        ccache --show-stats
+        ccache --zero-stats
 
     - name: run unit tests
       run: make test
