Find the SHA1 of HEAD also with old git versions
With git 2.11.0, the command

    git show-ref --verify --head HEAD --hash

fails with

    fatal: 'HEAD' - not a valid ref

Removing --verify fixes this, but we then get two lines corresponding to
HEAD and refs/remotes/origin/HEAD. Replacing HEAD with /HEAD ensures
that only the SHA1 of HEAD is displayed, and this works also with newer
versions of git (tested with 2.25.1)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ MESSAGE(STATUS "CXX ${CMAKE_CXX_COMPILER_ID}")
 #===========================================================================
 
 execute_process(
-    COMMAND git show-ref --verify --head HEAD --hash
+    COMMAND git show-ref --head /HEAD --hash
     OUTPUT_VARIABLE SHAstr OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 set(SHAstr "\"${SHAstr}\"")  # add quotes
