Make install-dependencies.sh more generic
This script can now run on multiple Linux distributions, including
Ubuntu, Debian, CentOS and Rocky Linux. Moreover:

 - it now supports two options:
    -u  install the libraries required for unit tests
    -d  install doxygen

 - the download of the library sources is skipped if the tarballs are
   already there.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,7 @@ jobs:
     - name: install dependencies
       run: |
         export PATH="/usr/lib/ccache:$PATH"
-        ci-tests/install-dependencies.sh
+        ci-tests/install-dependencies.sh -u
 
     - name: build
       run: |
