CI: enlarge disk of Rocky Linux virtual machine
The default size, 5 GB, is too small to run `sudo dnf upgrade'. Enlarge
it to 10 GB.

For this to work, one has to

    vagrant plugin install vagrant-disksize

on the host prior to starting the VM. Then, on the guest:

    sudo cfdisk /dev/sda  # grow sda1 to the full available size
    sudo xfs_growfs /dev/sda1

--- a/ci-tests/Vagrantfile
+++ b/ci-tests/Vagrantfile
@@ -74,6 +74,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "rockylinux_8", autostart: false do |machine|
     machine.vm.box = "rockylinux/8"
     machine.vm.hostname = "rockylinux-8"
+    machine.disksize.size = "10GB"
   end
 
 end
