Use a YAML parser for the configuration file
Replace the JSON parser based on Boost by a YAML based on yaml-cpp. This
new parser can still read the old JSON configuration files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ configure_file(config.h.in ./config.h)
 
 ADD_EXECUTABLE(feellgood main.cpp ${HEADERS} ${SOURCES})
 
-TARGET_LINK_LIBRARIES(feellgood scalfmm ANN)
+TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm ANN)
 
 if(DEFINED withSharedLib)
     MESSAGE( "Shared lib generation " ${withSharedLib} )
