--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Makefile.X86_64
 cmake_install.cmake
 config.h
 unit-tests/ut_config.h
+default-settings.o
 feellgood
 feellgood_exe
 install_manifest.txt
