Build default-settings.o with -z noexecstack
Building on Debian Testing gives the following link warning:

    /usr/bin/ld: warning: default-settings.o: missing .note.GNU-stack
    section implies executable stack
    /usr/bin/ld: NOTE: This behaviour is deprecated and will be removed
    in a future version of the linker

Fix this warning by building default-settings.o with the linker option
`-z noexecstack', which marks the object as not requiring an executable
stack. For some background information on the .note.GNU-stack section
and the `-z noexecstack' option, see:

    Executable stack
    https://www.airs.com/blog/archives/518

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ configure_file(config.h.in ./config.h)
 
 add_custom_command(
     OUTPUT default-settings.o
-    COMMAND ld -r -b binary default-settings.yml -o default-settings.o
+    COMMAND ld -r -b binary -z noexecstack default-settings.yml -o default-settings.o
     DEPENDS default-settings.yml)
 
 ADD_EXECUTABLE(feellgood main.cpp ${HEADERS} ${SOURCES} default-settings.o)
