--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -26,6 +26,8 @@ add_executable (test_ut_tiny ut_tiny.cpp)
 
 add_executable (test_ut_time_int ut_time_int.cpp)
 
+add_executable (test_ut_log-stats ut_log-stats.cpp)
+
 target_link_libraries(test_ut_pt3D
   ${Boost_FILESYSTEM_LIBRARY}
   ${Boost_SYSTEM_LIBRARY}
@@ -67,6 +69,10 @@ target_link_libraries(test_ut_time_int
   ${Boost_SYSTEM_LIBRARY}
   ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
   )
+
+target_link_libraries(test_ut_log-stats
+  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  )
 #enable_testing()
 
 add_test (NAME ut_pt3D_arithmetic COMMAND test_ut_pt3D)
@@ -76,3 +82,4 @@ add_test (NAME ut_tetra COMMAND test_ut_tetra)
 add_test (NAME ut_anisotropy COMMAND test_ut_anisotropy)
 add_test (NAME ut_tiny COMMAND test_ut_tiny)
 add_test (NAME ut_time_int COMMAND test_ut_time_int)
+add_test (NAME ut_log-stats COMMAND test_ut_log-stats)
