CI: show machine architecture in cache entry name
GitHub introduced a user interface for managing action caches[1], which
makes it possible to monitor cache usage and remove redundant cache
entries. For this to be effective, it would be useful to easily identify
the machine architecture each cache entry belongs to.

Change the cache entry naming scheme in order to use the actual
architecture name instead of a hash.

[1] https://github.com/feellgood/FeeLLGood/actions/caches

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,16 +18,18 @@ jobs:
       run: sudo apt-get install ccache
 
     - name: identify machine architecture
+      id: id-machine
       run: |
-        gcc -### -E -march=native - &> machine-type.txt
-        cat machine-type.txt
+        gcc -### -E -march=native - |& \
+        sed -En '/cc1/s/.*(arch=[[:alnum:]_-]+).*/\1/p' | \
+        tee -a $GITHUB_OUTPUT
 
     - name: restore cache
       uses: actions/cache@v3
       with:
         path: ~/.ccache
-        key: ccache-${{ hashFiles('machine-type.txt') }}-${{ github.sha }}
-        restore-keys: ccache-${{ hashFiles('machine-type.txt') }}-
+        key: ccache-${{ steps.id-machine.outputs.arch }}-${{ github.sha }}
+        restore-keys: ccache-${{ steps.id-machine.outputs.arch }}-
 
     - name: install dependencies
       run: |
