--- a/config.h.in
+++ b/config.h.in
@@ -30,12 +30,12 @@ typedef gmm::rsvector <double>   read_vector; /**< gmm read vector */
 typedef gmm::row_matrix	<write_vector>   write_matrix; /**< gmm write sparse matrix */
 typedef gmm::row_matrix	<read_vector>    read_matrix; /**< gmm read sparse matrix */
 
-const double mu0 = 4.*M_PI*1e-7;/**< \f$ \mu_0 = 4 \pi 10^{-7} \f$ */
+const double mu0 = 1.25663706212e-6;/**< T A^-1 m */
 const double nu0 = 1./mu0;/**< \f$ \nu_0 = 1/\mu_0 \f$ */
-const double PLANCKS_H    	= 6.62606896e-34;   /**< kg m^2 / s */
-const double PLANCKS_HBAR 	= 1.05457162825e-34; /**< kg m^2 / s */
-const double CHARGE_ELECTRON 	= 1.602176487e-19;   /**< C */
-const double MASS_ELECTRON 	= 9.10938188e-31;   /**< kg */
+const double PLANCKS_H    	= 6.62607015e-34;   /**< kg m^2 / s */
+const double PLANCKS_HBAR 	= PLANCKS_H/(2*M_PI); /**< kg m^2 / s */
+const double CHARGE_ELECTRON 	= 1.602176634e-19;   /**< C */
+const double MASS_ELECTRON 	= 9.1093837015e-31;   /**< kg */
 const double BOHRS_MUB = CHARGE_ELECTRON*PLANCKS_HBAR/(2.*MASS_ELECTRON); /**< C.m^2 */
 
 /** for debugging purpose, some determinist pseudo random number for ep,eq vector basis can be used */
